--- a/user-microservice/build.gradle
+++ b/user-microservice/build.gradle
@@ -37,9 +37,8 @@ dependencies {
 	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
 	testImplementation 'org.mockito:mockito-junit-jupiter:5.11.0'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
-	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
-	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'
+	implementation 'com.auth0:java-jwt:4.4.0'
+
 }
 
 tasks.named('bootBuildImage') {
