--- a/user-microservice/src/main/resources/application.yml
+++ b/user-microservice/src/main/resources/application.yml
@@ -15,3 +15,9 @@ spring:
       private-key: ${private-key}
       user-generator: ${user-generator}
 
+  springdoc:
+    api-docs:
+      path: /api-docs
+    swagger-ui:
+      path: /swagger-ui
+
