--- a/user-microservice/src/main/resources/application.yml
+++ b/user-microservice/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8090
+  port: 8091
 
 spring:
   datasource:
@@ -8,7 +8,7 @@ spring:
     password: ${password}
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
       dialect: org.hibernate.dialect.MySQL5Dialect
   security:
     jwt:
